[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyorthoani"
dynamic = ["version"]
description = "A Python implementation of the OrthoANI algorithm for nucleotide identity measurement."
readme = "README.md"
requires-python = ">=3.6"
license = { file = "COPYING" }
authors = [
  { name = "Martin Larralde", email = "martin.larralde@embl.de" },
]
keywords = ["ani", "average", "nucleotide", "identity", "genomic", "taxonomy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dependencies = [
    "biopython ~=1.73"
]

[project.optional-dependencies]
cli = [
    "better-exceptions ~=0.3.0"
]

[project.urls]
"Bug Tracker" = "https://github.com/althonos/pyorthoani/issues"
"Changelog" = "https://github.com/althonos/pyorthoani/blob/master/CHANGELOG.md"
"CI" = "https://github.com/althonos/pyorthoani/actions"

[project.scripts]
pyorthoani = "pyorthoani._main:main"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "pyorthoani.__version__"}

[tool.coverage.report]
include = ["pyorthoani/*.py"]
omit = ["tests/*"]
show_missing = true
exclude_lines = [
   "pragma: no cover",
   "raise NotImplementedError",
   "if __name__ == .__main__.:",
   "except ImportError:",
   "if typing.TYPE_CHECKING:",
   "@abc.abstractmethod",
   "if False:",
]

[tool.coverage.run]
branch = true
source = ["pyorthoani"]

[tool.pydocstyle]
inherit = false
ignore = ["D200", "D203", "D213", "D406", "D407"]
match = "(?!test)(?!setup)[^\\._].*\\.py"

[tool.mypy]
ignore_missing_imports = true

["tool.mypy-orthoani.*"]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true

[tool.flake8]
max-line-length = 99
doctests = true
exclude =  [".git", ".eggs", "__pycache__", "tests/", "docs/", "build/", "dist/"]
