# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name = orthoani
version = file: orthoani/_version.txt
author = Martin Larralde
author-email = martin.larralde@embl.de
home-page = https://github.com/althonos/orthoani
description = An implementation of the OrthoANI algorithm for nucleotide identity measurement.
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = COPYING
platform = any
keywords =
    ani
    average
    nucleotide
    identity
    genomic
    taxonomy
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Bio-Informatics
project_urls =
    Bug Tracker = https://github.com/althonos/orthoani/issues
    Changelog = https://github.com/althonos/orthoani/blob/master/CHANGELOG.md

[options]
zip_safe = false
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
packages = orthoani
test_suite = tests
setup_requires =
    setuptools >=38.3.0
install_requires =
    biopython ~=1.77

[options.package_data]
orthoani = py.typed, _version.txt, *.pyi

[bdist_wheel]
universal = true

[sdist]
formats = gztar

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
match = (?!test)(?!setup).*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions

[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
